# deep_learning

./: pyproject.toml
deep_learning/: digit_recognition.ipynb
deep_learning/nedotorch/nn/: parameter.py
deep_learning/nedotorch/nn/modules/: __init__.py  activation.py  linear.py  loss.py  module.py  sequence.py
deep_learning/nedotorch/optim/: optimizer.py  sgd.py
