[tool.poetry]
name = "deep-learning"
version = "0.1.0"
description = ""
authors = ["SmEgDm <smegdm@gmail.com>"]
readme = "README.md"
packages = [{include = "deep_learning"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"
matplotlib = "^3.6.0"
python-mnist = "^0.7"
pandas = "^1.5.0"
tqdm = "^4.64.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
jupyter = "^1.0.0"
notebook = "^6.4.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
